tests/baselines/reference/fixTypeParameterInSignatureWithRestParameters.errors.txt
tests/cases/compiler/fixTypeParameterInSignatureWithRestParameters.ts(2,1): error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly:
  Type argument candidate 'number' is not a valid type argument because it is not a supertype of candidate 'string'.


==== tests/cases/compiler/fixTypeParameterInSignatureWithRestParameters.ts (1 errors) ====
    function bar<T>(item1: T, item2: T) { }
    bar(1, ""); // Should be ok
    ~~~
!!! error TS2448: The type argument for type parameter 'T' cannot be inferred from the usage. Consider specifying the type arguments explicitly:
!!! error TS2448:   Type argument candidate 'number' is not a valid type argument because it is not a supertype of candidate 'string'.